test/cli/test-mutate/patched-resource/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResource: patched-resource.yaml
  policy: add-default-resources
  resources:
  - nginx-demo
  result: pass
  rule: add-default-requests
values:
  policies:
  - name: add-default-resources
    resources:
    - name: nginx-demo
      values:
        request.operation: CREATE
variables: variables.yaml
